# panda

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain
panda/: build.rs
panda-halo2-zal/: Cargo.toml
panda-halo2-zal/benches/: msm.rs
panda-halo2-zal/src/: lib.rs
panda-halo2-zal/tests/: t_zal_msm_accel.rs
panda/src/: lib.rs  utils.rs
panda/src/cuda/: CMakeLists.txt
panda/src/cuda/core/: panda_interface.cu
panda/src/cuda/core/curve/: affine.cuh  curve.cuh
panda/src/cuda/core/curve/bls12_377/: paramter.cuh
panda/src/cuda/core/curve/bn254/: paramter.cuh
panda/src/cuda/core/field/: field.cuh  field_host.cuh
panda/src/cuda/core/unit/msm/: msm_host.cuh
panda/src/cuda/test/: msm_test.cu
panda/src/gpu_ffi/: mod.rs
panda/src/gpu_manager/: common.rs
src/cuda/: build.sh
src/cuda/core/: CMakeLists.txt  config.cuh  panda_interface.cuh
src/cuda/core/common/: common.cu  common.cuh
src/cuda/core/common/math/: carry_chain.cuh  math.cuh  math_32bit.cuh  math_64bit.cuh
src/cuda/core/curve/: projective.cuh
src/cuda/core/curve/bls12_377/: config.cuh
src/cuda/core/curve/bn254/: config.cuh
src/cuda/core/field/: field_storage.cuh
src/cuda/core/field/asm/: asm_fp256.cuh  asm_fp384.cuh  ptx.cuh
src/cuda/core/unit/msm/: msm_config.cuh  msm_cuda.cuh
src/cuda/core/unit/ntt/: fft.cu  fft.cuh
src/cuda/test/: CMakeLists.txt
src/gpu_ffi/: binding.rs  common.rs
src/gpu_manager/: mod.rs  unit.rs  wrapper.rs
tests/: test.rs
