[package]
name = "panda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.*"
num_cpus = "*"
bincode = "1.3.3"
crossbeam-epoch = "0.9.4"
ark-std = { version = "0.3", features = ["print-trace"] }
rayon = "1.5.1"
hex = "*"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-bn254 = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_cbor = "0.11.2"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
rand = "*"
rand_chacha = "^0"

[dev-dependencies]
rand_core = "0.6.4"
num-bigint = "0.4.4"

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0"
glob = "0.3.0"
pathbuf = "0.1"
which = "^4.0"